--- a/public/assets/css/cover.css
+++ b/public/assets/css/cover.css
@@ -24,6 +24,9 @@ html,
 body {
   height: 100%;
   background: url('../img/bg.jpg');
+  background-repeat:no-repeat;
+  background-attachment:fixed;
+  background-position:center; 
 }
 body {
   min-height: 400px;
@@ -59,7 +62,11 @@ body {
  */
 
 .cover {
-  padding: 0 20px;
+  padding: 20px 20px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  margin: auto;
+  max-width: 95%;
 }
 .cover .btn-lg {
   padding: 10px 20px;
