--- a/public/assets/css/cover.css
+++ b/public/assets/css/cover.css
@@ -26,7 +26,8 @@ body {
   background: url('../img/bg.jpg');
   background-repeat:no-repeat;
   background-attachment:fixed;
-  background-position:center; 
+  background-position:center;
+  background-size: 100% 100%; 
 }
 body {
   min-height: 400px;
