--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -59,6 +59,7 @@ html {
 	/height: 110px;
 	padding: 10px; 
 	width: 100%;
+	min-width: 600px;
 	background: url('../img/navbar.png');
 	box-shadow: 4px 4px 5px black;
 }
@@ -83,6 +84,7 @@ html {
 	padding-bottom: 10px;
 	width: 96%;
 	max-width: 1100px;
+	min-width: 600px;
 }
 
 .bg {
@@ -185,6 +187,7 @@ label:hover {
   position: absolute;
   bottom: 0;
   width: 100%;
+  min-width: 600px;
   padding: 10px; 
   /* Set the fixed height of the footer here */
   height: 100px;
